force-app/main/default/objects/System_Behavior_Bypasser__c/System_Behavior_Bypasser__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>System Behavior Bypasser</label>
</CustomObject>