force-app/main/default/objects/System_Behavior_Bypasser__c/fields/Bypass_Account_PBs__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Account_PBs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Account PBs</label>
    <type>Checkbox</type>
</CustomField>