force-app/main/default/objects/System_Behavior_Bypasser__c/fields/Bypass_Competency_Tracker_VRs__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Competency_Tracker_VRs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Competency Tracker VRs</label>
    <type>Checkbox</type>
</CustomField>