force-app/main/default/objects/System_Behavior_Bypasser__c/fields/Bypass_Opportunity_VRs__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Opportunity_VRs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Opportunity VRs</label>
    <type>Checkbox</type>
</CustomField>