force-app/main/default/objects/System_Behavior_Bypasser__c/fields/Bypass_Trip_Report_VRs__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Trip_Report_VRs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Trip Report VRs</label>
    <type>Checkbox</type>
</CustomField>